# openhinglish

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSES.md  LICENSE  README.md  SECURITY.md  add_entries.py  pyproject.toml  remove_hero.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  lexicon_contribution.md
.github/workflows/: ci.yml
demo/: README.md  app.py  requirements.txt
docs/: ARCHITECTURE.md  AUDIO_ADAPTER.md  BENCHMARK.md  DATASETS.md  DEPLOYMENT.md  ECOSYSTEM_STRATEGY.md  FAQ.md  GOVERNANCE.md  LANGUAGE_PACKS.md  MASTER_ROADMAP.md  README_V1.md  REPO_STRUCTURE.md
docs/devlog/: DEVLOG_001.md
docs/outreach/: README.md  devto-article.md  linkedin.md  reddit.md  show-hn.md  x-thread.md
docs/superpowers/plans/: 2026-06-02-openhinglish-normalization-engine.md
docs/superpowers/specs/: 2026-06-02-openhinglish-normalization-engine-design.md
examples/: README.md  inspect_traces.py  quickstart.py
notebooks/: quickstart.ipynb
src/openhinglish/: __init__.py  data_loader.py  disambiguator.py  types.py
src/openhinglish/adapters/: indicf5.py
src/openhinglish/api/: cli.py  server.py  webui.py
src/openhinglish/eval/: metrics.py  run_bench.py
src/openhinglish/pipeline/: s0_preprocess.py  s1_classify.py  s2_spellnorm.py  s3_translit.py  s4_names_brands.py  s5_numerals.py  s6_assemble.py
tests/: test_data_loader.py  test_disambiguator.py  test_metrics.py  test_normalize.py  test_s0.py  test_s1.py  test_s2.py  test_s3.py  test_s4.py  test_s5.py  test_s6.py  test_server.py  test_types.py
(+9 files in other folders)
